<resources>
    <string name="app_name">Laboratorio 1 CompuMovil</string>
    <string name="action_settings">Settings</string>

    <string name="nombre">Nombre:</string>
    <string name="apellido">Apellido:</string>
    <string name="femenino">Femenino:</string>
    <string name="fecha">Fecha nacimiento:</string>
    <string name="sexo">Sexo:</string>
    <string name="masculino">Masculino:</string>
    <string name="pais">Pais:</string>
    <string name="telefono">Telefono:</string>
    <string name="direccion">Direccion:</string>
    <string name="email">E-mail:</string>
    <string name="favorito">Favorito:</string>
    <string name="mostrar">Mostrar:</string>

    <string name="datos">Aqui se mostraran los datos Ingresados</string>
    <string name="hobby">Hobby</string>
    <string name="no_favorito">Contacto No marcado como favorito</string>
    <string name="si_favorito">Contacto marcado como favorito</string>
    <string name="faltan_nombre">Falta completar el campo nombre</string>
    <string name="faltan_apellido">Falta completar el campo apellido</string>
    <string name="faltan_pais">Falta completar el campo pais</string>
    <string name="faltan_telefono">Falta completar el campo teléfono</string>
    <string name="faltan_direccion">Falta completar el campo dirección</string>
    <string name="faltan_email">Falta completar el campo e-mail</string>

    <string-array name="hobbies">
        <item>Deportes</item>
        <item>Aprender idiomas nuevos</item>
        <item>Tocar instrumentos musicales</item>
        <item>Jugar video juegos</item>
        <item>Leer</item>
    </string-array>

    <string-array name="paises">
        <item>Colombia</item>
        <item>China</item>
        <item>Alemania</item>
        <item>Japón</item>
        <item>Francia</item>
    </string-array>
</resources>
