<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">


    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">


        <RelativeLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/view"
            android:orientation="vertical">


            <EditText
                android:id="@+id/Nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/nombre"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/Apellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Nombre"
                android:ems="10"
                android:hint="@string/apellido"
                android:inputType="textPersonName" />

            <RadioGroup
                android:id="@+id/Sexo"
                android:layout_width="372dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/Apellido"
                android:orientation="horizontal"
                android:checkedButton="@+id/Masculino">

                <RadioButton
                    android:id="@+id/Masculino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/masculino" />

                <RadioButton
                    android:id="@+id/Femenino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/femenino" />
            </RadioGroup>

            <DatePicker
                android:id="@+id/fecha"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_below="@id/Sexo"
                android:calendarViewShown="false"
                android:datePickerMode="spinner" />

            <AutoCompleteTextView
                android:id="@+id/pais"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/fecha"
                android:hint="@string/pais" />

            <EditText
                android:id="@+id/telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/pais"
                android:ems="10"
                android:hint="@string/telefono"
                android:inputType="phone" />

            <EditText
                android:id="@+id/direccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/telefono"
                android:hint="@string/direccion" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/direccion"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <Spinner
                android:id="@+id/hobbies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/email" />

            <CheckBox
                android:id="@+id/favorito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/hobbies"
                android:text="@string/favorito" />


        </RelativeLayout>
    </ScrollView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/view"
            android:orientation="vertical">

            <Button
                android:id="@+id/mostrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/mostrar"/>

            <TextView
                android:id="@+id/datos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/datos"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
